Closed Bug 476404 Opened 16 years ago Closed 16 years ago

[SeaMonkey] New a11y test_relations.xul fails: "... not a target of relation of 'embeds' type ..."

Categories

(Core :: Disability Access APIs, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.9.2a1

People

(Reporter: sgautherie, Assigned: surkov)

References

(Blocks 2 open bugs)

Details

(Keywords: fixed1.9.1)

Attachments

(1 file, 1 obsolete file)

[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.2a1pre) Gecko/20090129 SeaMonkey/2.0a3pre] (experimental/_m-c_, home, optim default) (W2Ksp4) (http://hg.mozilla.org/mozilla-central/rev/01c42e286b4c +http://hg.mozilla.org/comm-central/rev/dcb38165108d) [Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.2a1pre) Gecko/20090201 SeaMonkey/2.0a3pre] (experimental/_m-c_, home, optim default) (W2Ksp4) (http://hg.mozilla.org/mozilla-central/rev/3d2cbfcf9217 +http://hg.mozilla.org/comm-central/rev/a62cac409cf7) { ... 1100 ERROR TEST-UNEXPECTED-FAIL | chrome://mochikit/content/a11y/accessible/test_relations.html | [xpconnect wrapped (nsISupports, nsIAccessible, nsIAccessibleDocument, nsIAccessNode)] is not a target of relation of 'embeds' type for [xpconnect wrapped (nsISupports, nsIAccessible, nsIAccessibleDocument, nsIAccessNode)]. - got null, expected [xpconnect wrapped (nsISupports, nsIAccessible, nsIAccessibleDocument, nsIAccessNode)] ... 1121 ERROR TEST-UNEXPECTED-FAIL | chrome://mochikit/content/a11y/accessible/test_relations.xul | [xpconnect wrapped (nsISupports, nsIAccessible, nsIAccessibleDocument, nsIAccessNode)] is not a target of relation of 'embeds' type for [xpconnect wrapped (nsISupports, nsIAccessible, nsIAccessibleDocument, nsIAccessNode)]. - got null, expected [xpconnect wrapped (nsISupports, nsIAccessible, nsIAccessibleDocument, nsIAccessNode)] ... }
Blocks: SmTestFail
Ok, some investigations. The problem is root accessible (seamonkey window) doesn't expose EMBEDS relation and it may be a problem for screen readers. Code lines: 1) get docshell tree item and get content tree item http://mxr.mozilla.org/mozilla-central/source/accessible/src/base/nsRootAccessible.cpp#1041 2) get accessible of content tree item 2.1) get DOM node for content tree item http://mxr.mozilla.org/mozilla-central/source/accessible/src/base/nsAccessNode.cpp#692 2.2) get pres shell for DOM node - http://mxr.mozilla.org/mozilla-central/source/accessible/src/base/nsAccessibilityService.cpp#1153 Obtained pres shell is null so we don't create accessible for content tree item.
Depends on: 470857
Attached patch patch (obsolete) — Splinter Review
Neil's catch.
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #362718 - Flags: superreview?(neil)
Attachment #362718 - Flags: review?(david.bolter)
Comment on attachment 362718 [details] [diff] [review] patch Marco, could you test AT who rely on embeds relation of root accessible?
Attachment #362718 - Flags: review?(marco.zehe)
Comment on attachment 362718 [details] [diff] [review] patch This makes embed show up in DOM Inspector.
Attachment #362718 - Flags: superreview?(neil) → superreview+
Comment on attachment 362718 [details] [diff] [review] patch Patch looks safe. If Marco says it fixes the bug r=me :)
Attachment #362718 - Flags: review?(david.bolter) → review+
Marco, friendly ping.
Comment on attachment 362718 [details] [diff] [review] patch >+ // Hidden documents don't have accessibles (like seamonekey's sidebar), Nit: One e too much in "SeaMonkey's". >+ // they are no of interest for a11y. Nit: "They are of no interest...", swap "of" and "no". I tested with all Windows screen readers, and they all pass.
Attachment #362718 - Flags: review?(marco.zehe) → review+
Comment on attachment 362718 [details] [diff] [review] patch Needed for SeaMonkey 2.
Attachment #362718 - Flags: approval1.9.1?
Attached patch patch2Splinter Review
with Marco's comments
Attachment #362718 - Attachment is obsolete: true
Attachment #364481 - Flags: approval1.9.1?
Attachment #362718 - Flags: approval1.9.1?
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
[Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.2a1pre) Gecko/20090228 SeaMonkey/2.0b1pre] (experimental/_m-c_, home, optim default) (W2Ksp4) (http://hg.mozilla.org/mozilla-central/rev/f7f62131998d +http://hg.mozilla.org/comm-central/rev/7ea34ef19dc4) V.Fixed
Status: RESOLVED → VERIFIED
Target Milestone: --- → mozilla1.9.2a1
Comment on attachment 364481 [details] [diff] [review] patch2 a191=beltzner
Attachment #364481 - Flags: approval1.9.1? → approval1.9.1+
Blocks: a11ytestdev
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: