 Bug 476404 -  [SeaMonkey] New a11y test_relations.xul fails, r=marcoz, davidb, sr=neil